parser.output
Grammar

    0 $accept: mini_c $end

    1 mini_c: translation_unit

    2 translation_unit: external_dcl
    3                 | translation_unit external_dcl

    4 external_dcl: function_def
    5             | declaration

    6 function_def: function_header compound_st

    7 function_header: dcl_spec function_name formal_param

    8 dcl_spec: dcl_specifiers

    9 dcl_specifiers: dcl_specifier
   10               | dcl_specifiers dcl_specifier

   11 dcl_specifier: type_qualifier
   12              | type_specifier

   13 type_qualifier: tconst

   14 type_specifier: tint
   15               | tvoid

   16 function_name: tident

   17 formal_param: '(' opt_formal_param ')'

   18 opt_formal_param: formal_param_list
   19                 | /* empty */

   20 formal_param_list: param_dcl
   21                  | formal_param_list ',' param_dcl

   22 param_dcl: dcl_spec declarator

   23 compound_st: '{' opt_dcl_list opt_stat_list '}'

   24 opt_dcl_list: declaration_list
   25             | /* empty */

   26 declaration_list: declaration
   27                 | declaration_list declaration

   28 declaration: dcl_spec init_dcl_list ';'

   29 init_dcl_list: init_declarator
   30              | init_dcl_list ',' init_declarator

   31 init_declarator: declarator
   32                | declarator '=' tnumber

   33 declarator: tident
   34           | tident '[' opt_number ']'

   35 opt_number: tnumber
   36           | /* empty */

   37 opt_stat_list: statement_list
   38              | /* empty */

   39 statement_list: statement
   40               | statement_list statement

   41 statement: compound_st
   42          | expression_st
   43          | if_st
   44          | while_st
   45          | return_st

   46 expression_st: opt_expression ';'

   47 opt_expression: expression
   48               | /* empty */

   49 if_st: tif '(' expression ')' statement
   50      | tif '(' expression ')' statement telse statement

   51 while_st: twhile '(' expression ')' statement

   52 return_st: treturn opt_expression ';'

   53 expression: assignment_exp

   54 assignment_exp: logical_or_exp
   55               | unary_exp '=' assignment_exp
   56               | unary_exp taddAssign assignment_exp
   57               | unary_exp tsubAssign assignment_exp
   58               | unary_exp tmulAssign assignment_exp
   59               | unary_exp tdivAssign assignment_exp
   60               | unary_exp tmodAssign assignment_exp

   61 logical_or_exp: logical_and_exp
   62               | logical_or_exp tor logical_and_exp

   63 logical_and_exp: equality_exp
   64                | logical_and_exp tand equality_exp

   65 equality_exp: relational_exp
   66             | equality_exp tequal relational_exp
   67             | equality_exp tnotequ relational_exp

   68 relational_exp: additive_exp
   69               | relational_exp '>' additive_exp
   70               | relational_exp '<' additive_exp
   71               | relational_exp tgreate additive_exp
   72               | relational_exp tlesse additive_exp

   73 additive_exp: multiplicative_exp
   74             | additive_exp '+' multiplicative_exp
   75             | additive_exp '-' multiplicative_exp

   76 multiplicative_exp: unary_exp
   77                   | multiplicative_exp '*' unary_exp
   78                   | multiplicative_exp '/' unary_exp
   79                   | multiplicative_exp '%' unary_exp

   80 unary_exp: postfix_exp
   81          | '-' unary_exp
   82          | '!' unary_exp
   83          | tinc unary_exp
   84          | tdec unary_exp

   85 postfix_exp: primary_exp
   86            | postfix_exp '[' expression ']'
   87            | postfix_exp '(' opt_actual_param ')'
   88            | postfix_exp tinc
   89            | postfix_exp tdec

   90 opt_actual_param: actual_param
   91                 | /* empty */

   92 actual_param: actual_param_list

   93 actual_param_list: assignment_exp
   94                  | actual_param_list ',' assignment_exp

   95 primary_exp: tident
   96            | tnumber
   97            | '(' expression ')'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 82
'%' (37) 79
'(' (40) 17 49 50 51 87 97
')' (41) 17 49 50 51 87 97
'*' (42) 77
'+' (43) 74
',' (44) 21 30 94
'-' (45) 75 81
'/' (47) 78
';' (59) 28 46 52
'<' (60) 70
'=' (61) 32 55
'>' (62) 69
'[' (91) 34 86
']' (93) 34 86
'{' (123) 23
'}' (125) 23
error (256)
tlowerthanelse (258)
telse (259) 50
tident (260) 16 33 34 95
tnumber (261) 32 35 96
tconst (262) 13
tif (263) 49 50
tint (264) 14
treturn (265) 52
tvoid (266) 15
twhile (267) 51
taddAssign (268) 56
tsubAssign (269) 57
tmulAssign (270) 58
tdivAssign (271) 59
tmodAssign (272) 60
tor (273) 62
tand (274) 64
tequal (275) 66
tnotequ (276) 67
tgreate (277) 71
tlesse (278) 72
tinc (279) 83 88
tdec (280) 84 89


Nonterminals, with rules where they appear

$accept (43)
    on left: 0
mini_c (44)
    on left: 1, on right: 0
translation_unit (45)
    on left: 2 3, on right: 1 3
external_dcl (46)
    on left: 4 5, on right: 2 3
function_def (47)
    on left: 6, on right: 4
function_header (48)
    on left: 7, on right: 6
dcl_spec (49)
    on left: 8, on right: 7 22 28
dcl_specifiers (50)
    on left: 9 10, on right: 8 10
dcl_specifier (51)
    on left: 11 12, on right: 9 10
type_qualifier (52)
    on left: 13, on right: 11
type_specifier (53)
    on left: 14 15, on right: 12
function_name (54)
    on left: 16, on right: 7
formal_param (55)
    on left: 17, on right: 7
opt_formal_param (56)
    on left: 18 19, on right: 17
formal_param_list (57)
    on left: 20 21, on right: 18 21
param_dcl (58)
    on left: 22, on right: 20 21
compound_st (59)
    on left: 23, on right: 6 41
opt_dcl_list (60)
    on left: 24 25, on right: 23
declaration_list (61)
    on left: 26 27, on right: 24 27
declaration (62)
    on left: 28, on right: 5 26 27
init_dcl_list (63)
    on left: 29 30, on right: 28 30
init_declarator (64)
    on left: 31 32, on right: 29 30
declarator (65)
    on left: 33 34, on right: 22 31 32
opt_number (66)
    on left: 35 36, on right: 34
opt_stat_list (67)
    on left: 37 38, on right: 23
statement_list (68)
    on left: 39 40, on right: 37 40
statement (69)
    on left: 41 42 43 44 45, on right: 39 40 49 50 51
expression_st (70)
    on left: 46, on right: 42
opt_expression (71)
    on left: 47 48, on right: 46 52
if_st (72)
    on left: 49 50, on right: 43
while_st (73)
    on left: 51, on right: 44
return_st (74)
    on left: 52, on right: 45
expression (75)
    on left: 53, on right: 47 49 50 51 86 97
assignment_exp (76)
    on left: 54 55 56 57 58 59 60, on right: 53 55 56 57 58 59 60 93
    94
logical_or_exp (77)
    on left: 61 62, on right: 54 62
logical_and_exp (78)
    on left: 63 64, on right: 61 62 64
equality_exp (79)
    on left: 65 66 67, on right: 63 64 66 67
relational_exp (80)
    on left: 68 69 70 71 72, on right: 65 66 67 69 70 71 72
additive_exp (81)
    on left: 73 74 75, on right: 68 69 70 71 72 74 75
multiplicative_exp (82)
    on left: 76 77 78 79, on right: 73 74 75 77 78 79
unary_exp (83)
    on left: 80 81 82 83 84, on right: 55 56 57 58 59 60 76 77 78 79
    81 82 83 84
postfix_exp (84)
    on left: 85 86 87 88 89, on right: 80 86 87 88 89
opt_actual_param (85)
    on left: 90 91, on right: 87
actual_param (86)
    on left: 92, on right: 90
actual_param_list (87)
    on left: 93 94, on right: 92 94
primary_exp (88)
    on left: 95 96 97, on right: 85


state 0

    0 $accept: . mini_c $end

    tconst  shift, and go to state 1
    tint    shift, and go to state 2
    tvoid   shift, and go to state 3

    mini_c            go to state 4
    translation_unit  go to state 5
    external_dcl      go to state 6
    function_def      go to state 7
    function_header   go to state 8
    dcl_spec          go to state 9
    dcl_specifiers    go to state 10
    dcl_specifier     go to state 11
    type_qualifier    go to state 12
    type_specifier    go to state 13
    declaration       go to state 14


state 1

   13 type_qualifier: tconst .

    $default  reduce using rule 13 (type_qualifier)


state 2

   14 type_specifier: tint .

    $default  reduce using rule 14 (type_specifier)


state 3

   15 type_specifier: tvoid .

    $default  reduce using rule 15 (type_specifier)


state 4

    0 $accept: mini_c . $end

    $end  shift, and go to state 15


state 5

    1 mini_c: translation_unit .
    3 translation_unit: translation_unit . external_dcl

    tconst  shift, and go to state 1
    tint    shift, and go to state 2
    tvoid   shift, and go to state 3

    $default  reduce using rule 1 (mini_c)

    external_dcl     go to state 16
    function_def     go to state 7
    function_header  go to state 8
    dcl_spec         go to state 9
    dcl_specifiers   go to state 10
    dcl_specifier    go to state 11
    type_qualifier   go to state 12
    type_specifier   go to state 13
    declaration      go to state 14


state 6

    2 translation_unit: external_dcl .

    $default  reduce using rule 2 (translation_unit)


state 7

    4 external_dcl: function_def .

    $default  reduce using rule 4 (external_dcl)


state 8

    6 function_def: function_header . compound_st

    '{'  shift, and go to state 17

    compound_st  go to state 18


state 9

    7 function_header: dcl_spec . function_name formal_param
   28 declaration: dcl_spec . init_dcl_list ';'

    tident  shift, and go to state 19

    function_name    go to state 20
    init_dcl_list    go to state 21
    init_declarator  go to state 22
    declarator       go to state 23


state 10

    8 dcl_spec: dcl_specifiers .
   10 dcl_specifiers: dcl_specifiers . dcl_specifier

    tconst  shift, and go to state 1
    tint    shift, and go to state 2
    tvoid   shift, and go to state 3

    $default  reduce using rule 8 (dcl_spec)

    dcl_specifier   go to state 24
    type_qualifier  go to state 12
    type_specifier  go to state 13


state 11

    9 dcl_specifiers: dcl_specifier .

    $default  reduce using rule 9 (dcl_specifiers)


state 12

   11 dcl_specifier: type_qualifier .

    $default  reduce using rule 11 (dcl_specifier)


state 13

   12 dcl_specifier: type_specifier .

    $default  reduce using rule 12 (dcl_specifier)


state 14

    5 external_dcl: declaration .

    $default  reduce using rule 5 (external_dcl)


state 15

    0 $accept: mini_c $end .

    $default  accept


state 16

    3 translation_unit: translation_unit external_dcl .

    $default  reduce using rule 3 (translation_unit)


state 17

   23 compound_st: '{' . opt_dcl_list opt_stat_list '}'

    tconst  shift, and go to state 1
    tint    shift, and go to state 2
    tvoid   shift, and go to state 3

    $default  reduce using rule 25 (opt_dcl_list)

    dcl_spec          go to state 25
    dcl_specifiers    go to state 10
    dcl_specifier     go to state 11
    type_qualifier    go to state 12
    type_specifier    go to state 13
    opt_dcl_list      go to state 26
    declaration_list  go to state 27
    declaration       go to state 28


state 18

    6 function_def: function_header compound_st .

    $default  reduce using rule 6 (function_def)


state 19

   16 function_name: tident .
   33 declarator: tident .
   34           | tident . '[' opt_number ']'

    '['  shift, and go to state 29

    '('       reduce using rule 16 (function_name)
    $default  reduce using rule 33 (declarator)


state 20

    7 function_header: dcl_spec function_name . formal_param

    '('  shift, and go to state 30

    formal_param  go to state 31


state 21

   28 declaration: dcl_spec init_dcl_list . ';'
   30 init_dcl_list: init_dcl_list . ',' init_declarator

    ','  shift, and go to state 32
    ';'  shift, and go to state 33


state 22

   29 init_dcl_list: init_declarator .

    $default  reduce using rule 29 (init_dcl_list)


state 23

   31 init_declarator: declarator .
   32                | declarator . '=' tnumber

    '='  shift, and go to state 34

    $default  reduce using rule 31 (init_declarator)


state 24

   10 dcl_specifiers: dcl_specifiers dcl_specifier .

    $default  reduce using rule 10 (dcl_specifiers)


state 25

   28 declaration: dcl_spec . init_dcl_list ';'

    tident  shift, and go to state 35

    init_dcl_list    go to state 21
    init_declarator  go to state 22
    declarator       go to state 23


state 26

   23 compound_st: '{' opt_dcl_list . opt_stat_list '}'

    tident   shift, and go to state 36
    tnumber  shift, and go to state 37
    tif      shift, and go to state 38
    treturn  shift, and go to state 39
    twhile   shift, and go to state 40
    tinc     shift, and go to state 41
    tdec     shift, and go to state 42
    '('      shift, and go to state 43
    '{'      shift, and go to state 17
    '-'      shift, and go to state 44
    '!'      shift, and go to state 45

    ';'       reduce using rule 48 (opt_expression)
    $default  reduce using rule 38 (opt_stat_list)

    compound_st         go to state 46
    opt_stat_list       go to state 47
    statement_list      go to state 48
    statement           go to state 49
    expression_st       go to state 50
    opt_expression      go to state 51
    if_st               go to state 52
    while_st            go to state 53
    return_st           go to state 54
    expression          go to state 55
    assignment_exp      go to state 56
    logical_or_exp      go to state 57
    logical_and_exp     go to state 58
    equality_exp        go to state 59
    relational_exp      go to state 60
    additive_exp        go to state 61
    multiplicative_exp  go to state 62
    unary_exp           go to state 63
    postfix_exp         go to state 64
    primary_exp         go to state 65


state 27

   24 opt_dcl_list: declaration_list .
   27 declaration_list: declaration_list . declaration

    tconst  shift, and go to state 1
    tint    shift, and go to state 2
    tvoid   shift, and go to state 3

    $default  reduce using rule 24 (opt_dcl_list)

    dcl_spec        go to state 25
    dcl_specifiers  go to state 10
    dcl_specifier   go to state 11
    type_qualifier  go to state 12
    type_specifier  go to state 13
    declaration     go to state 66


state 28

   26 declaration_list: declaration .

    $default  reduce using rule 26 (declaration_list)


state 29

   34 declarator: tident '[' . opt_number ']'

    tnumber  shift, and go to state 67

    $default  reduce using rule 36 (opt_number)

    opt_number  go to state 68


state 30

   17 formal_param: '(' . opt_formal_param ')'

    tconst  shift, and go to state 1
    tint    shift, and go to state 2
    tvoid   shift, and go to state 3

    $default  reduce using rule 19 (opt_formal_param)

    dcl_spec           go to state 69
    dcl_specifiers     go to state 10
    dcl_specifier      go to state 11
    type_qualifier     go to state 12
    type_specifier     go to state 13
    opt_formal_param   go to state 70
    formal_param_list  go to state 71
    param_dcl          go to state 72


state 31

    7 function_header: dcl_spec function_name formal_param .

    $default  reduce using rule 7 (function_header)


state 32

   30 init_dcl_list: init_dcl_list ',' . init_declarator

    tident  shift, and go to state 35

    init_declarator  go to state 73
    declarator       go to state 23


state 33

   28 declaration: dcl_spec init_dcl_list ';' .

    $default  reduce using rule 28 (declaration)


state 34

   32 init_declarator: declarator '=' . tnumber

    tnumber  shift, and go to state 74


state 35

   33 declarator: tident .
   34           | tident . '[' opt_number ']'

    '['  shift, and go to state 29

    $default  reduce using rule 33 (declarator)


state 36

   95 primary_exp: tident .

    $default  reduce using rule 95 (primary_exp)


state 37

   96 primary_exp: tnumber .

    $default  reduce using rule 96 (primary_exp)


state 38

   49 if_st: tif . '(' expression ')' statement
   50      | tif . '(' expression ')' statement telse statement

    '('  shift, and go to state 75


state 39

   52 return_st: treturn . opt_expression ';'

    tident   shift, and go to state 36
    tnumber  shift, and go to state 37
    tinc     shift, and go to state 41
    tdec     shift, and go to state 42
    '('      shift, and go to state 43
    '-'      shift, and go to state 44
    '!'      shift, and go to state 45

    $default  reduce using rule 48 (opt_expression)

    opt_expression      go to state 76
    expression          go to state 55
    assignment_exp      go to state 56
    logical_or_exp      go to state 57
    logical_and_exp     go to state 58
    equality_exp        go to state 59
    relational_exp      go to state 60
    additive_exp        go to state 61
    multiplicative_exp  go to state 62
    unary_exp           go to state 63
    postfix_exp         go to state 64
    primary_exp         go to state 65


state 40

   51 while_st: twhile . '(' expression ')' statement

    '('  shift, and go to state 77


state 41

   83 unary_exp: tinc . unary_exp

    tident   shift, and go to state 36
    tnumber  shift, and go to state 37
    tinc     shift, and go to state 41
    tdec     shift, and go to state 42
    '('      shift, and go to state 43
    '-'      shift, and go to state 44
    '!'      shift, and go to state 45

    unary_exp    go to state 78
    postfix_exp  go to state 64
    primary_exp  go to state 65


state 42

   84 unary_exp: tdec . unary_exp

    tident   shift, and go to state 36
    tnumber  shift, and go to state 37
    tinc     shift, and go to state 41
    tdec     shift, and go to state 42
    '('      shift, and go to state 43
    '-'      shift, and go to state 44
    '!'      shift, and go to state 45

    unary_exp    go to state 79
    postfix_exp  go to state 64
    primary_exp  go to state 65


state 43

   97 primary_exp: '(' . expression ')'

    tident   shift, and go to state 36
    tnumber  shift, and go to state 37
    tinc     shift, and go to state 41
    tdec     shift, and go to state 42
    '('      shift, and go to state 43
    '-'      shift, and go to state 44
    '!'      shift, and go to state 45

    expression          go to state 80
    assignment_exp      go to state 56
    logical_or_exp      go to state 57
    logical_and_exp     go to state 58
    equality_exp        go to state 59
    relational_exp      go to state 60
    additive_exp        go to state 61
    multiplicative_exp  go to state 62
    unary_exp           go to state 63
    postfix_exp         go to state 64
    primary_exp         go to state 65


state 44

   81 unary_exp: '-' . unary_exp

    tident   shift, and go to state 36
    tnumber  shift, and go to state 37
    tinc     shift, and go to state 41
    tdec     shift, and go to state 42
    '('      shift, and go to state 43
    '-'      shift, and go to state 44
    '!'      shift, and go to state 45

    unary_exp    go to state 81
    postfix_exp  go to state 64
    primary_exp  go to state 65


state 45

   82 unary_exp: '!' . unary_exp

    tident   shift, and go to state 36
    tnumber  shift, and go to state 37
    tinc     shift, and go to state 41
    tdec     shift, and go to state 42
    '('      shift, and go to state 43
    '-'      shift, and go to state 44
    '!'      shift, and go to state 45

    unary_exp    go to state 82
    postfix_exp  go to state 64
    primary_exp  go to state 65


state 46

   41 statement: compound_st .

    $default  reduce using rule 41 (statement)


state 47

   23 compound_st: '{' opt_dcl_list opt_stat_list . '}'

    '}'  shift, and go to state 83


state 48

   37 opt_stat_list: statement_list .
   40 statement_list: statement_list . statement

    tident   shift, and go to state 36
    tnumber  shift, and go to state 37
    tif      shift, and go to state 38
    treturn  shift, and go to state 39
    twhile   shift, and go to state 40
    tinc     shift, and go to state 41
    tdec     shift, and go to state 42
    '('      shift, and go to state 43
    '{'      shift, and go to state 17
    '-'      shift, and go to state 44
    '!'      shift, and go to state 45

    ';'       reduce using rule 48 (opt_expression)
    $default  reduce using rule 37 (opt_stat_list)

    compound_st         go to state 46
    statement           go to state 84
    expression_st       go to state 50
    opt_expression      go to state 51
    if_st               go to state 52
    while_st            go to state 53
    return_st           go to state 54
    expression          go to state 55
    assignment_exp      go to state 56
    logical_or_exp      go to state 57
    logical_and_exp     go to state 58
    equality_exp        go to state 59
    relational_exp      go to state 60
    additive_exp        go to state 61
    multiplicative_exp  go to state 62
    unary_exp           go to state 63
    postfix_exp         go to state 64
    primary_exp         go to state 65


state 49

   39 statement_list: statement .

    $default  reduce using rule 39 (statement_list)


state 50

   42 statement: expression_st .

    $default  reduce using rule 42 (statement)


state 51

   46 expression_st: opt_expression . ';'

    ';'  shift, and go to state 85


state 52

   43 statement: if_st .

    $default  reduce using rule 43 (statement)


state 53

   44 statement: while_st .

    $default  reduce using rule 44 (statement)


state 54

   45 statement: return_st .

    $default  reduce using rule 45 (statement)


state 55

   47 opt_expression: expression .

    $default  reduce using rule 47 (opt_expression)


state 56

   53 expression: assignment_exp .

    $default  reduce using rule 53 (expression)


state 57

   54 assignment_exp: logical_or_exp .
   62 logical_or_exp: logical_or_exp . tor logical_and_exp

    tor  shift, and go to state 86

    $default  reduce using rule 54 (assignment_exp)


state 58

   61 logical_or_exp: logical_and_exp .
   64 logical_and_exp: logical_and_exp . tand equality_exp

    tand  shift, and go to state 87

    $default  reduce using rule 61 (logical_or_exp)


state 59

   63 logical_and_exp: equality_exp .
   66 equality_exp: equality_exp . tequal relational_exp
   67             | equality_exp . tnotequ relational_exp

    tequal   shift, and go to state 88
    tnotequ  shift, and go to state 89

    $default  reduce using rule 63 (logical_and_exp)


state 60

   65 equality_exp: relational_exp .
   69 relational_exp: relational_exp . '>' additive_exp
   70               | relational_exp . '<' additive_exp
   71               | relational_exp . tgreate additive_exp
   72               | relational_exp . tlesse additive_exp

    tgreate  shift, and go to state 90
    tlesse   shift, and go to state 91
    '>'      shift, and go to state 92
    '<'      shift, and go to state 93

    $default  reduce using rule 65 (equality_exp)


state 61

   68 relational_exp: additive_exp .
   74 additive_exp: additive_exp . '+' multiplicative_exp
   75             | additive_exp . '-' multiplicative_exp

    '+'  shift, and go to state 94
    '-'  shift, and go to state 95

    $default  reduce using rule 68 (relational_exp)


state 62

   73 additive_exp: multiplicative_exp .
   77 multiplicative_exp: multiplicative_exp . '*' unary_exp
   78                   | multiplicative_exp . '/' unary_exp
   79                   | multiplicative_exp . '%' unary_exp
